<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.SignUpFragment">

    <ImageView
        android:id="@+id/iconBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@+id/iconBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iconBack" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/ad"
        android:inputType="text"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
        app:layout_constraintEnd_toEndOf="@+id/editTextSurname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSurname"
        app:layout_constraintTop_toBottomOf="@+id/textSignUpInfo"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/soyad"
        android:inputType="text"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/kullanici_adi"
        android:inputType="text"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/emil_icon"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/uye_ol"
        app:backgroundTint="@color/piece_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textSignUpInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:text="@string/signup_info"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>