<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.CartFragment">

    <ImageView
        android:id="@+id/iconBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_header"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@+id/iconBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iconBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/cart_row"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintBottom_toTopOf="@+id/textTotalName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <TextView
        android:id="@+id/textTotalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:text="@string/total_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/buttonCartConfirm"
        app:layout_constraintEnd_toStartOf="@+id/textTotalPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:text="@string/total_price"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="@+id/textTotalName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textTotalName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCartConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:padding="@dimen/padding_medium"
        android:text="@string/confirm_cart"
        android:textSize="@dimen/text_size_medium"
        app:backgroundTint="@color/piece_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>