<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/small_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/card_image" />

            <ImageView
                android:id="@+id/iconDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delete_icon" />

            <TextView
                android:id="@+id/textProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toTopOf="@+id/textProductPriceName"
                app:layout_constraintStart_toEndOf="@+id/imageProduct"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textProductPriceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_name"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textPieceName"
                app:layout_constraintStart_toStartOf="@+id/textProductName"
                app:layout_constraintTop_toBottomOf="@+id/textProductName" />

            <TextView
                android:id="@+id/textPieceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piece_name"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textProductPriceName"
                app:layout_constraintTop_toBottomOf="@+id/textProductPriceName" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/price"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textProductPriceName"
                app:layout_constraintTop_toTopOf="@+id/textProductPriceName" />

            <TextView
                android:id="@+id/textPiece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/piece"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textPieceName"
                app:layout_constraintTop_toTopOf="@+id/textPieceName" />

            <TextView
                android:id="@+id/textTotalProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>