<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/contentLayout"
    tools:context=".ui.fragment.DetailFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_header"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@+id/iconBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iconBack" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/small_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iconFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/favorite_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:src="@drawable/imageview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="@+id/imageProduct"
                app:layout_constraintStart_toStartOf="@+id/imageProduct"
                app:layout_constraintTop_toBottomOf="@+id/imageProduct" />

            <TextView
                android:id="@+id/textProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/product_price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="@+id/textProductName"
                app:layout_constraintStart_toStartOf="@+id/textProductName"
                app:layout_constraintTop_toBottomOf="@+id/textProductName" />

            <ImageButton
                android:id="@+id/buttonPieceMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/add_piece_button"
                android:src="@drawable/minus_piece_icon"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/textPiece"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textPiece" />

            <ImageButton
                android:id="@+id/buttonPiecePlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:background="@drawable/add_piece_button"
                android:src="@drawable/piece_plus_icon"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textPiece"
                app:layout_constraintTop_toBottomOf="@+id/textProductPrice" />

            <TextView
                android:id="@+id/textPiece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piece"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintEnd_toStartOf="@+id/buttonPiecePlus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonPieceMinus"
                app:layout_constraintTop_toTopOf="@+id/buttonPiecePlus" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_xlarge"
                android:layout_marginBottom="@dimen/margin_xlarge"
                android:text="@string/add_cart"
                app:backgroundTint="@color/piece_button"
                app:icon="@drawable/cart_white_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>